--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,27 +12,26 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Pocket_Poker"
         tools:targetApi="31">
+
         <activity
-            android:name=".PlayAgain"
+            android:name="UTD.cs.edu.pocket_poker.LostActivity"
             android:exported="false" />
         <activity
-            android:name=".LostActivity"
+            android:name="UTD.cs.edu.pocket_poker.WinActivity"
             android:exported="false" />
         <activity
-            android:name=".WinActivity"
+            android:name="UTD.cs.edu.pocket_poker.TableActivity"
             android:exported="false" />
         <activity
-            android:name=".TableActivity"
+            android:name="UTD.cs.edu.pocket_poker.JoinActivity"
             android:exported="false" />
         <activity
-            android:name=".JoinActivity"
+            android:name="UTD.cs.edu.pocket_poker.HostActivity"
             android:exported="false" />
         <activity
-            android:name=".HostActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name="UTD.cs.edu.pocket_poker.MainActivity"
+            android:exported="true"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
