TableActivity now recognizes player hands

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,19 +15,21 @@
 
         <activity
             android:name="UTD.cs.edu.pocket_poker.LostActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name="UTD.cs.edu.pocket_poker.WinActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name="UTD.cs.edu.pocket_poker.TableActivity"
-            android:exported="false" />
+            android:exported="true"
+            android:screenOrientation="landscape"/>
+
         <activity
             android:name="UTD.cs.edu.pocket_poker.JoinActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name="UTD.cs.edu.pocket_poker.HostActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name="UTD.cs.edu.pocket_poker.MainActivity"
             android:exported="true"
