--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,13 +56,16 @@
         tools:targetApi="31">
         <activity
             android:name=".PlayAgain"
-            android:exported="false" />
+            android:exported="true"
+            android:screenOrientation="landscape"/>
         <activity
             android:name=".LostActivity"
-            android:exported="false" />
+            android:exported="true"
+            android:screenOrientation="landscape"/>
         <activity
             android:name=".WinActivity"
-            android:exported="false" />
+            android:exported="true"
+            android:screenOrientation="landscape"/>
         <activity
             android:name=".TableActivity"
             android:exported="true"
